syntax = "proto3";

option csharp_namespace = "Shared.Grpc.User";

import "google/protobuf/timestamp.proto";

package shared;

// Запрос: DTO транзакция, которая будет сохранена в истории пользователя
message CreateTransactionRequest {
	string user_id = 1;
	string event_id = 2;
	string event_name = 3;
	int32 seat_row = 4;
	int32 seat_number = 5;
	float amount = 6;
	google.protobuf.Timestamp transaction_date = 7;
}

// Ответ: на создание транзакции
message CreateTransactionResult {
	bool success = 1;
}

// Запрос: Проверка существования пользователя по Guid
message UserExistsRequest {
	string user_id = 1;
}

// Ответ: Булевое значение, существует ли пользователь
message UserExistsResponse {
	bool exists = 1;
}

// Запрос: DTO уведомление, которое будет отправлено пользователю
message CreateNotificationRequest {
	string user_id = 1;
	string message = 2;
	google.protobuf.Timestamp date_time = 3;
}

// Ответ: на создание уведомления
message CreateNotificationResult {
	bool success = 1;
}

// gRPC-сервис
service UserService {
	rpc CreateTransaction (CreateTransactionRequest) returns (CreateTransactionResult);
	rpc UserExists (UserExistsRequest) returns (UserExistsResponse);
	rpc CreateNotification (CreateNotificationRequest) returns (CreateNotificationResult);
}